--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -1,12 +1,15 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=650,20
 Size=550,680
+Collapsed=0
 
 [Window][GameMode]
 Pos=60,60
 Size=108,54
+Collapsed=0
 
