--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -13,3 +13,13 @@ Pos=60,60
 Size=108,54
 Collapsed=0
 
+[Window][Structure]
+Collapsed=0
+
+[Window][Structures]
+Pos=114,552
+Size=955,258
+Collapsed=0
+
+[Docking][Data]
+
