--- a/src/Makefile
+++ b/src/Makefile
@@ -9,12 +9,12 @@ LIBS = -LC:/msys64/mingw64/bin/../lib -lSDL2_image -lmingw32 -lSDL2main -lSDL2
 IMGUI_SRC = ../thirdparty/imgui/imgui.cpp ../thirdparty/imgui/imgui_demo.cpp \
 ../thirdparty/imgui/imgui_draw.cpp ../thirdparty/imgui/imgui_tables.cpp \
 ../thirdparty/imgui/imgui_widgets.cpp \
-../thirdparty/imgui/backends/imgui_impl_sdlrenderer2.cpp \
+../thirdparty/imgui/backends/imgui_impl_opengl3.cpp \
 ../thirdparty/imgui/backends/imgui_impl_sdl2.cpp \
 ../thirdparty/imgui/misc/cpp/imgui_stdlib.cpp
 
 all : ../test.exe
-../test.exe : test.cpp ../thirdparty/glad-master/src/glad.c #$(IMGUI_SRC)
+../test.exe : test.cpp ../thirdparty/glad-master/src/glad.c $(IMGUI_SRC)
 	g++ $^ $(INCLUDE) $(LIBS) -o $@
 
 clean :
