src has been updated

--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -17,8 +17,13 @@ Collapsed=0
 Collapsed=0
 
 [Window][Structures]
-Pos=114,552
-Size=955,258
+Pos=584,0
+Size=960,645
+Collapsed=0
+
+[Window][Your cards]
+Pos=610,356
+Size=910,490
 Collapsed=0
 
 [Docking][Data]
